# pi-hud

./: .gitignore  LICENSE  PRD.md  README.md  config.example.ini  install.sh  pyproject.toml  requirements.txt  uninstall.sh  update.sh
.claude/: launch.json
agent-workspace/: AGENT_INSTRUCTIONS.md  API_SPEC.md  DATABASE_SCHEMA.md  DECISIONS.md  DESIGN_REVIEW.md  DESIGN_SYSTEM.md  DRIVER_OPTIMIZATION.md  FRONTEND_SPEC.md  HUD_SCREEN_SPEC.md  INSTALL_DEPLOYMENT.md  SECURITY.md  TASKS.md  TEST_PLAN.md  TEST_REPORT.md  WORKLOG.md
agent-workspace/assets/: README.md  pi-hud-final-mockups.html
agent-workspace/reference/: 04-DESIGN-SYSTEM.md
examples/: docker-compose.pi-dns-sync.yml
src/pi_hud/: __init__.py  api.py  auth.py  config.py  db.py  display_loop.py  display_test.py  main.py  message_store.py  metrics.py  models.py  power.py  renderer.py
src/pi_hud/drivers/: __init__.py  st7735s.py
src/pi_hud/static/css/: app.css
src/pi_hud/static/js/: app.js
src/pi_hud/templates/: _macros.html  apidocs.html  base.html  dashboard.html  logs.html  messages.html  settings.html  tokens.html
systemd/: pi-hud.service.template
tests/: test_pi_hud.py
